--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^9.38.0",
-    "eslint-plugin-vue": "^10.5.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.28.0",
     "glob": "7.2.3",
     "sass": "^1.93.2",
     "sass-loader": "^16.0.5",
-    "vue-eslint-parser": "10.0.0",
+    "vue-eslint-parser": "^9.3.2",
     "webpack-chain": "6.5.1"
   },
   "eslintConfig": {
